change bckg color, font-family and remove idea is the new black

--- a/estilo.css
+++ b/estilo.css
@@ -1,2 +1,13 @@
-body {margin:10px;}
+body {
+    background-color: #f2e3e5;
+    font-family: 'Montserrat', sans-serif;
+    margin:10px;
+    text-align: center;
+}
 ul {list-style: none;}
+.Montserrat {
+    font-family: 'Oswald', sans-serif;
+}
+#habilidades {
+    text-align: right;
+}
