--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,25 @@
 body {
-    background-color: #f2e3e5;
+    background-color: rgb(197, 255, 197);
+    color: rgb(66, 66, 66);
     font-family: 'Montserrat', sans-serif;
-    margin:10px;
+    font-size: 16px;
     text-align: center;
 }
-ul {list-style: none;}
+img {
+    border-radius: 25px;
+}
+ul {
+    list-style: none;
+}
+.highSkill {
+    font-size: 1.2em;
+    font-weight: 600;
+}
 .Montserrat {
     font-family: 'Oswald', sans-serif;
+}
+.title-orange {
+    color: coral;
 }
 #habilidades {
     text-align: right;
