--- a/estilo.css
+++ b/estilo.css
@@ -1,71 +1,87 @@
 * {
-    margin: auto;
+  margin: auto;
 }
+
 body {
-    background-color: rgb(197, 255, 197);
-    color: rgb(66, 66, 66);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    text-align: center;
+  background-color: rgb(197 , 255 , 197);
+  color: rgb(66 , 66 , 66);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  text-align: center;
 }
+
 header {
-    background-color: rgb(253, 193, 169);
-    min-height: 250px;
-    padding: 1em 35px;
+  background-color: rgb(253 , 193 , 169);
+  min-height: 250px;
+  padding: 1em 35px;
 }
+
 header .main-picture .description{
-    margin: 2em 2em;
-    max-width: 1000px;
+  margin: 2em 2em;
+  max-width: 1000px;
 }
+
 img .main-picture {
-    background: linear-gradient(to right, rgb(192, 92, 192), rgb(92, 92, 192));
-    border-radius: 200px;
-    padding: 0.5em;
-    width: 200px;
+  background: linear-gradient(to right, rgb(192, 92, 192), rgb(92, 92, 192));
+  border-radius: 200px;
+  padding: 0.5em;
+  width: 200px;
 }
+
 ul {
-    list-style: none;
+  list-style: none;
 }
+
 .description {
-    margin: 2em 0;
-    text-align: center;
+  margin: 2em 0;
+  text-align: center;
 }
+
 li {
-    padding: 8px 0;
+  padding: 8px 0;
 }
-li:nth-child(odd) {
-    font-weight: bold;
+
+.title-orange ul li:nth-child(odd) {
+  font-weight: bold;
 }
+
 .main-picture{
-    float: left;
-    margin: 2em 12px;
+  float: left;
+  margin: 2em 12px;
 }
+
 .Montserrat {
-    font-family: 'Oswald', sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
+
 .projects {
-    display: flexbox;
+  display: flexbox;
 }
+
 .projects img {
-    margin: 1.5em 35px;
-    border-radius: 24px;
-    padding: 0.5em;
-    width: 200px;
+  border-radius: 24px;
+  margin: 1.5em 35px;
+  padding: 0.5em;
+  width: 200px;
 }
+
 .title-orange {
-    color: indianred;
-    margin: 4em 35px 12px 35px;
+  color: indianred;
+  margin: 4em 35px 12px 35px;
 }
+
 #footer {
-    background-image: url('recife_skyline_1_BW.svg');
-    background-position: 1% 25%;
-    background-size: cover;
-    color: ghostwhite;
-    padding: 6em 0;
+  background-image: url('recife_skyline_1_BW.svg');
+  background-position: 1% 25%;
+  background-size: cover;
+  color: ghostwhite;
+  padding: 6em 0;
 }
+
 #footer a:link, #footer a:visited {
-    color: lightblue;
+  color: lightblue;
 }
+
 #skills {
-    clear: both;
+  clear: both;
 }
