--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,5 +1,7 @@
-.App {
+main {
+  height: 100vh;
   text-align: center;
+  width: 100%;
 }
 
 .App-logo {
@@ -8,24 +10,57 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .App-header, .header-button {
+    transition: right 0.5s ease-in-out;
   }
 }
 
 .App-header {
+  align-items: center;
   background-color: #282c34;
-  min-height: 100vh;
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  height: inherit;
+  justify-content: flex-end;
+  overflow-x: hidden;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 40%;
 }
 
-.App-link {
+.App-link, .App-header a {
+  border-bottom: 1px solid silver;
   color: #61dafb;
+  height: 50px;
+  padding-top: 25px;
+  text-align: center;
+  width: 100%;
+}
+
+.hide-header {
+  right: -50%;
+}
+
+.header-button {
+  background-color: rgba(245, 245, 245, 0.548);
+  border-radius: 50%;
+  bottom: 10px;
+  padding: 10px;
+  position: absolute;
+  right: 5px;
+}
+
+.with-header {
+  right: 40%;
+}
+
+.home {
+  height: 100%;
+  margin: 0 5px;
+  overflow-y: auto;
 }
 
 @keyframes App-logo-spin {
