--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: fixed;
+  width: 100%;
 }
 
 code {
