--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color:rgb(242, 255, 242);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,9 +10,17 @@ body {
   width: 100%;
 }
 
+:is(h1, h2, h3) {
+  color: indianred;
+}
+
+a {
+  color: coral;
+}
+
 .dark-mode {
   color: antiquewhite;
-  background-color: black;
+  background-color: #282c34;
 }
 
 code {
