--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,10 @@ img {
   animation: flip 0.5s ease-in-out forwards;
 }
 
+.project-list {
+  list-style: none;
+}
+
 .ranking-img {
   width: 100%;
 }
