--- a/src/App.css
+++ b/src/App.css
@@ -90,10 +90,11 @@ img {
   border-radius: 50%;
   height: 150px;
   width: 150px;
+  animation: flip-out 0.5s alternate ease-in-out;
 }
 
 .profile:hover {
-  animation: flip 0.5s ease-in-out forwards;
+  animation: flip-in 0.5s alternate ease-in-out forwards;
 }
 
 .project-list {
@@ -184,13 +185,24 @@ img {
   }
 }
 
-@keyframes flip {
+@keyframes flip-in {
   0% {
     transform: rotateY(0)
   }
   100% {
-    background-size: contain;
+    background-size: cover;
     background-image: url('./images/pixel-caboclo.svg');
     transform: rotateY(180deg);
+  }
+}
+
+@keyframes flip-out {
+  0%{
+    background-size: cover;
+    background-image: url('./images/pixel-caboclo.svg');
+    transform: rotateY(180deg)
+  }
+  100% {
+    transform: rotateY(0);
   }
 }
