--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ img {
 .header-button {
   background-image: url('./assets/menu.svg');
   bottom: 200px;
+  z-index: 2;
 }
 
 .hide-header {
@@ -98,7 +99,33 @@ img {
 }
 
 .project-list {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  height: 85%;
+  justify-content: center;
+  justify-items: center;
   list-style: none;
+  margin: 1em 0;
+  overflow-y: scroll;
+  padding: 0;
+  position: absolute;
+  width: 100%;
+}
+
+.project-item {
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  margin: 1em;
+  max-width: 60%;
+  min-width: 20%;
+  padding: 0 0 1em;
+  width: 300px;
+}
+
+.project-item > p, .project-item > a {
+  padding: 0 1em;
 }
 
 .ranking-img {
@@ -154,7 +181,7 @@ img {
   .App-header, .app-button {
     transition: right 0.5s ease-in-out;
   }
-  p, .skills li {
+  p, .skills li, img {
     transition: border 0.5s ease-in-out, color 0.5s ease-in-out;
   }
 }
@@ -177,6 +204,13 @@ img {
 
   .header-button {
     top: 10px;
+  }
+
+  .project-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1em;
   }
 
   .with-header {
