--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@ img {
 }
 
 .project-item {
+  cursor: pointer;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -122,6 +123,12 @@ img {
   min-width: 20%;
   padding: 0 0 1em;
   width: 300px;
+  animation: zoom-out 0.5s ease-in-out both;
+}
+
+.project-item:hover {
+  opacity: 0.9;
+  animation: zoom-in 0.5s ease-in-out both;
 }
 
 .project-item > p, .project-item > a {
@@ -238,5 +245,23 @@ img {
   }
   100% {
     transform: rotateY(0);
+  }
+}
+
+@keyframes zoom-in {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+
+@keyframes zoom-out {
+  0% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
