header links at flex-start

--- a/src/App.css
+++ b/src/App.css
@@ -10,36 +10,26 @@ img {
 
 .App-header {
   align-items: center;
-  background-color: inherit;
   color: white;
   display: flex;
-  flex-direction: column;
-  height: 120vh;
-  justify-content: center;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 40%;
-  z-index: 2;
+  flex-direction: row;
+  justify-content: flex-start;
+  position: block;
+  width: 100%;
 }
 
 .App-header-link {
   background-color: inherit;
-  border-bottom: 1px solid silver;
-  border-left: none;
-  border-right: none;
-  border-top: none;
+  border: none;
   color: coral;
   cursor: pointer;
-  font-size: 22px;
-  padding-top: 3rem;
-  padding-bottom: 1rem;
+  font-size: 1.2rem;
+  padding: 1rem;
   text-align: center;
-  width: 100%;
 }
 
 .App-header-link:hover {
-  box-shadow: inset 0 -10px coral;
+  background-color: lightgray;
 }
 
 .app-button {
@@ -235,44 +225,17 @@ img {
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-header, .app-button {
-    transition: right 0.5s ease-in-out;
-  }
   p, .skills li, img {
-    transition: border 0.5s ease-in-out, color 0.5s ease-in-out;
+    transition: color 0.5s ease-in-out;
   }
 }
 
 @media (min-width: 768px), (orientation: landscape) {
-  .App-header, .app-button {
-    transition: top 0.5s ease-in-out;
-  }
-
-  .App-header {
-    flex-direction: row;
-    height: 30px;
-    width: 100%;
-  }
-
-  .hide-header {
-    right: 0;
-    top: -70px;
-  }
-
-  .header-button {
-    top: 10px;
-  }
-
   .project-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 1em;
-  }
-
-  .with-header {
-    right: 20px;
-    top: 70px;
   }
 }
 
