--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,11 @@ img {
 .App-header-link {
   background-color: inherit;
   border: none;
-  color: coral;
   cursor: pointer;
   font-size: 1.2rem;
   padding: 1rem;
   text-align: center;
+  color: white;
 }
 
 .App-header-link:hover {
@@ -211,7 +211,6 @@ img {
   padding: 2rem;
   font-size: 14pt;
   font-weight: bold;
-  color: coral;
 }
 
 .lang-button:hover {
