--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body, main {
-  background-color:#f2fff2;
+  background-image:linear-gradient(160deg, #000046 0%, #094198 50%, #1cb5e0 100%);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,18 +8,15 @@ body, main {
   -moz-osx-font-smoothing: grayscale;
   position: fixed;
   width: 100%;
+  color: antiquewhite;
 }
 
-:is(h1, h2, h3) {
-  color: indianred;
-}
-
-a {
-  color: #ff4500;
+a:active, a:hover, a:link, a:visited {
+  color: white;
 }
 
 .dark-mode {
-  color: antiquewhite;
+  color: white;
   background-color: #282c34;
 }
 
@@ -27,11 +24,14 @@ a {
   background-color: #181a1f;
 }
 
-.light-card {
-  background-color: floralwhite;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    color: white;
+    background-color: black;
+  }
 }
