--- a/src/index.css
+++ b/src/index.css
@@ -4,29 +4,25 @@ body, main {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-size: 1rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: fixed;
   width: 100%;
-  color: antiquewhite;
+  color: white;
 }
 
 a:active, a:hover, a:link, a:visited {
   color: white;
 }
 
-.dark-mode {
-  color: white;
-  background-color: #282c34;
-}
-
-.dark-card {
-  background-color: #181a1f;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+svg {
+  position: absolute;
 }
 
 @media (prefers-color-scheme: light) {
