--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 main {
-  height: 100vh;
   text-align: center;
-  width: 100%;
 }
 
 img {
@@ -10,16 +8,19 @@ img {
 
 .App-header {
   align-items: center;
+  background-color: #0E61AB;
   color: white;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  position: block;
+  justify-content: space-between;
+  position: fixed;
   width: 100%;
+  z-index: 4;
 }
 
 .App-header-link {
   background-color: inherit;
+  text-decoration: none;
   border: none;
   cursor: pointer;
   font-size: 1.2rem;
@@ -29,7 +30,15 @@ img {
 }
 
 .App-header-link:hover {
-  background-color: lightgray;
+  color: #1CB4DF;
+}
+
+.App-header-link:disabled {
+  color: white;
+  outline: 1px solid white;
+  outline-offset: -8px;
+  border-radius: 50%;
+  cursor: default ;
 }
 
 .app-button {
@@ -64,7 +73,6 @@ img {
 
 .home {
   box-sizing: border-box;
-  height: 100%;
   overflow-y: auto;
   width: 100%;
 }
@@ -95,14 +103,11 @@ img {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  height: 85%;
   justify-content: center;
   justify-items: center;
   list-style: none;
   margin: 1em 0;
-  overflow-y: scroll;
   padding: 0;
-  position: absolute;
   width: 100%;
 }
 
@@ -194,7 +199,7 @@ img {
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  p, .skills li, img {
+  p, .skills li, img, a, button {
     transition: color 0.5s ease-in-out;
   }
 }
