--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@ img {
   text-decoration: none;
   border: none;
   cursor: pointer;
-  font-size: 1.2rem;
-  padding: 1rem;
+  font-size: 2vw;
+  padding: 1.5vw;
   text-align: center;
   color: white;
 }
@@ -36,7 +36,7 @@ img {
 .App-header-link:disabled {
   color: white;
   outline: 1px solid white;
-  outline-offset: -8px;
+  outline-offset: -1vw;
   border-radius: 50%;
   cursor: default ;
 }
@@ -53,12 +53,6 @@ img {
 
 .black {
   color: black;
-}
-
-.header-button {
-  background-image: url('./assets/menu.svg');
-  bottom: 200px;
-  z-index: 2;
 }
 
 .home {
