--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '@/styles/fonts.css';
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -14,4 +15,8 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+}
+
+pre, code {
+  font-family: 'Hack Nerd Font', monospace;
 }
